attempt fix for scrolling issue on mobile
ensure that 'project-page' class is removed from <main> element when
the homepage is rendered

--- a/style.css
+++ b/style.css
@@ -584,7 +584,7 @@ footer {
     }
     .project-title {
         z-index: 0;
-        color: rgba(0, 0, 0, 0.245);
+        color: rgba(0, 0, 0, 0.553);
         position: initial;
     }
     .project-title:hover {
